k8s/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cityflow-backend
  namespace: cityflow
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: cityflow
spec:
  selector:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: cityflow
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - port: 5000
      targetPort: http
      name: http
